# Code_ADAS

./: autonomous_car.py  capture.py  cv_lane_driver.py  run.py  run_0.py  run_1.py  run_2.py  run_hsv.py  run_yolo.py  train_yolo.ipynb  train_yolo_traffic.py  train_yolo_traffic_kaggle.ipynb
capture/: capture.py
car_control/: car_control.ino
car_wifi_control/: car_wifi_control.ino
code/c/cv_ai/: CMakeLists.txt  car_control_uart.ino  lane_follow_yolo.cpp  run_tune.c  run_tune.cpp  run_tune_yolo.cpp  run_yolo.cpp
code/py/: fix_onnx.py  run_tune.py  run_yolo.py  run_yolo_fix.py  train_yolo_v10n.ipynb  train_yolo_v8n.ipynb
dataset/labels/train/: img_0023_copy0.txt  img_0026_copy0.txt  img_0034_copy2.txt  img_0035_copy5.txt  img_0035_copy7.txt  img_0037_copy1.txt  img_0039_copy6.txt  img_0040_copy8.txt  img_0041_copy7.txt  img_0042_copy5.txt  img_0043_copy1.txt  img_0044_copy4.txt  img_0045_copy9.txt  img_0046_copy7.txt  img_0047_copy9.txt  img_0048_copy6.txt  img_0049_copy7.txt  img_0050_copy7.txt  img_0052_copy5.txt  img_0053_copy1.txt  img_0054_copy8.txt  img_0055_copy5.txt  img_0056_copy3.txt  img_0057_copy2.txt  img_0063_copy6.txt  img_0075_copy1.txt  img_0076_copy3.txt  img_0077_copy7.txt  img_0078_copy7.txt  img_0080_copy7.txt  img_0081_copy8.txt  img_0082_copy6.txt  img_0083_copy0.txt  img_0084_copy2.txt  img_0085_copy5.txt  img_0086_copy5.txt  img_0087_copy7.txt  img_0088_copy7.txt  img_0089_copy3.txt  img_0091_copy5.txt  (+92 more)
dataset/labels/val/: img_0036_copy0.txt  img_0038_copy3.txt  img_0051_copy1.txt  (+25 more)
export/: results.csv
export/yolo_v10n/: results.csv
(+7 files in other folders)
